--- a/chisnghiax/japan.css
+++ b/chisnghiax/japan.css
@@ -477,6 +477,7 @@
     width: 85.28px;
     height: 42px;
     background-color: transparent;
+    padding-left: 15px;
 }
 
 .gu {
@@ -507,6 +508,7 @@
     background-color: blue;
     border-radius: 50%;
     margin-right: 15px;
+
 }
 
 .big {
